--- a/timetracker/sheets/templates/sheets/timesheet_list.html
+++ b/timetracker/sheets/templates/sheets/timesheet_list.html
@@ -14,7 +14,11 @@
         <div class="content">
             <ul>
                 {% for object in object_list %}
-                    <li>{{ object }}</li>
+                    <li>
+                        <a href="{% url 'activities:list' object.pk %}">
+                            {{ object }}
+                        </a>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
