Add a timesheet list copy

--- a/timetracker/sheets/templates/sheets/timesheet_list.html
+++ b/timetracker/sheets/templates/sheets/timesheet_list.html
@@ -5,6 +5,9 @@
         <div class="level-left">
             <div classs="level-item">
                 <h1 class="title">{{ _('Time sheets') }}</h1>
+                <h2 class="subtitle">
+                    {{ _('Select a time sheet from the list.') }}
+                </h2>
             </div>
         </div>
         <div class="level-right">
