Add export button on the activities list

--- a/timetracker/activities/templates/activities/activity_list.html
+++ b/timetracker/activities/templates/activities/activity_list.html
@@ -124,6 +124,11 @@
                     {{_('Rename this time sheet')}}
                 </a>
             </div>
+            <div class="level-item">
+                <a class="button is-secondary" href="{% url "sheets:export" sheet.pk %}">
+                    {{_('Export this time sheet')}}
+                </a>
+            </div>
         </div>
     </div>
 </section>
