--- a/timetracker/activities/templates/activities/activity_chart.html
+++ b/timetracker/activities/templates/activities/activity_chart.html
@@ -20,9 +20,8 @@
     <div class="container">
         <div class="content">
             <h3>Per project hours</h3>
-            <div id="js-per-project-chart"></div>
+            <div id="js-per-project-chart" data-api-url="{% url "api:sheets:per-project-statistics" sheet.pk %}"></div>
         </div>
     </div>
 </section>
-
 {% endblock %}
