Move visualisation view from activities to sheets

--- a/timetracker/activities/templates/activities/activity_list.html
+++ b/timetracker/activities/templates/activities/activity_list.html
@@ -133,7 +133,7 @@
 
         <div class="level-right">
             <div class="level-item">
-                <a class="button is-primary" href="{% url "activities:chart" sheet.pk %}">
+                <a class="button is-primary" href="{% url "sheets:visualisation" sheet.pk %}">
                     {{_('See Visualisation')}}
                 </a>
             </div>
