Add sheets listing API view

--- a/timetracker/sheets/templates/sheets/timesheet_visualisation.html
+++ b/timetracker/sheets/templates/sheets/timesheet_visualisation.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="content">
             <h3>{{ _('Hours per project this week') }}</h3>
-            <div id="js-per-project-chart" data-api-url="{% url "api:sheets:per-project-statistics" object.pk %}"></div>
+            <div id="js-per-project-chart" data-api-url="{% url "api:sheets:hours-per-project-statistics" object.pk %}"></div>
         </div>
     </div>
 </section>
