--- a/timetracker/sheets/templates/sheets/timesheet_visualisation.html
+++ b/timetracker/sheets/templates/sheets/timesheet_visualisation.html
@@ -25,8 +25,8 @@
 <section class="section">
     <div class="container">
         <div class="content">
-            <h3>{{ _('Hours per project this week') }}</h3>
-            <div id="js-per-project-chart" data-api-url="{% url "api:sheets:hours-per-project-statistics" object.pk %}"></div>
+            <div class="chart-container" id="js-per-project-chart"
+                data-api-url="{% url "api:sheets:hours-per-project-statistics" object.pk %}"></div>
         </div>
     </div>
 </section>
