Use Site object's name as the page title

--- a/timetracker/templates/base.html
+++ b/timetracker/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}timetracker{% endblock %}</title>
+    <title>{% block title %}{{ request.site.name }}{% endblock %}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
