--- a/timetracker/templates/header.html
+++ b/timetracker/templates/header.html
@@ -3,7 +3,7 @@
 <header>
     <nav class="navbar" role="navigation">
         <div class="navbar-brand">
-            <a class="navbar-item" href="{% url 'home' %}">timetracker</a>
+            <a class="navbar-item" href="{% url 'home' %}">{{ request.site.name }}</a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="main-navbar-items">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
