Do not allow overlaps of dates in activities

--- a/timetracker/activities/templates/activities/activity_list.html
+++ b/timetracker/activities/templates/activities/activity_list.html
@@ -68,7 +68,7 @@
                 {% endifchanged %}
                 <tr>
                     <td>
-                        {{ activity.start_time }}{% if activity.end_time %}- {{ activity.end_time }}{% endif %}
+                        {{ activity.start_datetime|time }}{% if activity.end_datetime %}- {{ activity.end_datetime|time }}{% endif %}
                     </td>
                     <td>{{ activity.project }}</td>
                     <td>
